# autoauth-rs

./: Cargo.toml  README.md
src/: auth.rs  config.rs  main.rs
